force-app/main/default/objects/Bolt_Kanban__User_Filter__c/Bolt_Kanban__User_Filter__c.object-meta.xml
<CustomObject>
    <label>User Filter</label>
    <nameField>
        <label>User Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>