force-app/main/default/objects/Bolt_Kanban__User_Filter__c/fields/Bolt_Kanban__Filters__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Filters__c</fullName>
    <label>Filters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>