force-app/main/default/objects/Bolt_Kanban__User_Filter__c/fields/Bolt_Kanban__Is_Owner_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Is_Owner_Grouped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner Grouped</label>
    <type>Checkbox</type>
</CustomField>