force-app/main/default/objects/Bolt_Kanban__User_Filter__c/fields/Bolt_Kanban__Kanban_Id__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Kanban_Id__c</fullName>
    <label>Kanban Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>