force-app/main/default/objects/Bolt_Kanban__User_Filter__c/fields/Bolt_Kanban__Timespan__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Timespan__c</fullName>
    <label>Timespan</label>
    <length>80</length>
    <type>Text</type>
</CustomField>