force-app/main/default/objects/Bolt_Kanban__User_Filter__c/fields/Bolt_Kanban__User__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>