force-app/main/default/objects/Bolt_Kanban__User_Filter__c/listViews/Bolt_Kanban__All.listView-meta.xml
<ListView>
    <fullName>Bolt_Kanban__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>